tests/NormalTests/paczka1/fuzzy1/28156530.err
Error in line 1: 4anTzrgKEw A885 7,7
Error in line 5: 9Ei S502 56,1
Error in line 4: 4anTzrgKEw A771 68,0
Error in line 9: qRIwPsX99WS A919 93,2
Error in line 21: 9E4i S502 245,2
Error in line 25: 4anTzrgKEw A771 74,4
Error in line 18: NmLTSdiXH A771 25,0
Error in line 30: NmLTSdiXH A919 19,4
